env/profile based configuration for the masses

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.mvc.favicon.enabled=false
 
 logging.level.com.example=DEBUG
 spring.cache.jcache.config=classpath:ehcache-demo.xml
+
+#spring.config.location=classpath:./config/${env}.properties
+
+env=found
+spring.profiles.include=${env:found}
+
+app.name=default
